Update build_docker.groovy